Remove stuff we don’t use in instUI
This removes all the stuff except for the stuff we use in 
@instructure/ui-color-utils

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.4.1",
-  "name": "tinycolor2",
+  "name": "@instructure/tinycolor2",
   "description": "Fast Color Parsing and Manipulation",
   "url": "http://bgrins.github.com/TinyColor",
   "license": "MIT",
